[gd_scene load_steps=22 format=3 uid="uid://8kll4qow8gaf"]

[ext_resource type="Script" path="res://scripts/main_gameplay/gamescene.gd" id="1_4cdgf"]
[ext_resource type="PackedScene" uid="uid://c0nini266ff55" path="res://assets/models/environment/lahan.fbx" id="2_x46d2"]
[ext_resource type="ArrayMesh" uid="uid://davm5itbs5dmu" path="res://assets/models/environment/16758_Vocational_Truck_v1_NEW.obj" id="3_w0bv2"]
[ext_resource type="PackedScene" uid="uid://ot380bdhna2g" path="res://assets/models/environment/Barrier.FBX" id="4_163b2"]
[ext_resource type="PackedScene" uid="uid://ce5g0fw0e43hw" path="res://scenes/main_gameplay/maincharacter_gamescene.tscn" id="4_rdpe2"]
[ext_resource type="Script" path="res://scenes/main_gameplay/DestroyArea.gd" id="5_1iuk8"]
[ext_resource type="PackedScene" uid="uid://u2rhwop4b57x" path="res://scenes/main_gameplay/low_poly_truck.tscn" id="5_yqbdp"]
[ext_resource type="Script" path="res://scripts/main_gameplay/gameoverui.gd" id="7_pbo13"]
[ext_resource type="PackedScene" uid="uid://bbf15spwf84ah" path="res://scenes/main_gameplay/runtrack_fromblender.tscn" id="8_fx7ic"]
[ext_resource type="PackedScene" uid="uid://daf1kasf8li46" path="res://scenes/main_gameplay/city/gedung_3.tscn" id="10_hpw4c"]
[ext_resource type="PackedScene" uid="uid://df68n2y08xotn" path="res://assets/models/environment/Gedung 2.blend" id="11_rbn5a"]
[ext_resource type="PackedScene" uid="uid://djfmil2jll1c3" path="res://scenes/main_gameplay/city/gedung_1.tscn" id="12_sg2da"]
[ext_resource type="PackedScene" uid="uid://d2lnu3pwlv22y" path="res://scenes/main_gameplay/run_track_2.tscn" id="14_f1u3f"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_6vew0"]

[sub_resource type="Sky" id="Sky_yp0d6"]
sky_material = SubResource("ProceduralSkyMaterial_6vew0")

[sub_resource type="Environment" id="Environment_6xa0r"]
background_mode = 2
background_energy_multiplier = 1.3
sky = SubResource("Sky_yp0d6")

[sub_resource type="BoxShape3D" id="BoxShape3D_ifine"]
size = Vector3(13.9287, 0.376526, 0.841858)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0e88e"]
albedo_color = Color(0.494118, 0.407843, 0.294118, 1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_lf0cb"]
data = PackedVector3Array(-10, 0.1, 10, 10, 0.1, 10, -10, -0.1, 10, 10, 0.1, 10, 10, -0.1, 10, -10, -0.1, 10, 10, 0.1, -10, -10, 0.1, -10, 10, -0.1, -10, -10, 0.1, -10, -10, -0.1, -10, 10, -0.1, -10, 10, 0.1, 10, 10, 0.1, -10, 10, -0.1, 10, 10, 0.1, -10, 10, -0.1, -10, 10, -0.1, 10, -10, 0.1, -10, -10, 0.1, 10, -10, -0.1, -10, -10, 0.1, 10, -10, -0.1, 10, -10, -0.1, -10, 10, 0.1, 10, -10, 0.1, 10, 10, 0.1, -10, -10, 0.1, 10, -10, 0.1, -10, 10, 0.1, -10, -10, -0.1, 10, 10, -0.1, 10, -10, -0.1, -10, 10, -0.1, 10, 10, -0.1, -10, -10, -0.1, -10)

[sub_resource type="BoxMesh" id="BoxMesh_e1swt"]
size = Vector3(20, 0.2, 20)

[sub_resource type="LabelSettings" id="LabelSettings_am2wf"]
font_size = 166

[node name="GameScene" type="Node3D"]
script = ExtResource("1_4cdgf")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6xa0r")

[node name="Root Scene2" parent="." instance=ExtResource("2_x46d2")]
transform = Transform3D(-5.28908e-08, 0, -1.21, 0, 1.21, 0, 1.21, 0, -5.28908e-08, 0.732864, 0, -2.47621)

[node name="dasar" parent="Root Scene2/RootNode" index="0"]
transform = Transform3D(495.2, 1.81899e-12, 1.27866e-06, 4.32918e-05, -8.85487e-05, -14.6261, -1.81899e-12, -495.2, 1.74357e-06, 2.01399, 0.167433, -0.233774)

[node name="Sun" parent="Root Scene2/RootNode" index="6"]
transform = Transform3D(0.804219, 0.503674, 0.315504, -0.411246, 0.854844, -0.316416, -0.429078, 0.124718, 0.894616, 19.9873, 17.2627, 0)
visible = false

[node name="Area3D" type="Area3D" parent="Root Scene2"]
transform = Transform3D(1.02394, 0, 0, 0, 1.02394, 0, 0, 0, 1.02394, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Root Scene2/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 16.7838, 2.02188, 0.171236, -0.242265)
shape = SubResource("BoxShape3D_ifine")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.00295715, 0.589047, -0.808093, 0.00405682, 0.808083, 0.589055, 0.999987, -0.00502022, -3.55394e-08, -9.31329, 7.34146, 10.423)
shadow_enabled = true

[node name="MainCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.999391, 0.0348995, 0, -0.0348995, 0.999391, 0.575, 2.902, 9.55)
current = true

[node name="16758VocationalTruckV1New" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.0185341, 0.00243126, -0.000338494, -0.000335619, 4.40257e-05, 0.0186929, 0.00243166, 0.0185372, -1.4796e-11, -2.51406, 0.33541, 0.641713)
visible = false
material_override = SubResource("StandardMaterial3D_0e88e")
mesh = ExtResource("3_w0bv2")

[node name="Root Scene" parent="." instance=ExtResource("4_163b2")]
transform = Transform3D(-2.27358e-08, 0, -0.520134, 0, 0.520134, 0, 0.520134, 0, -2.27358e-08, 4.66674, 0.392156, 4.41587)

[node name="RootNode" parent="Root Scene" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00769711, -3.69549e-06, 0.0436449)

[node name="barrier" parent="Root Scene/RootNode" index="0"]
transform = Transform3D(100, 0, 0, 0, 0, 100, 0, -100, 0, 0.00237083, -0.0321765, -0.0284367)

[node name="DestroyArea" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.672401, -1.10958, -1.50489)
script = ExtResource("5_1iuk8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DestroyArea"]
shape = SubResource("ConcavePolygonShape3D_lf0cb")

[node name="Lantai" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.672401, 0.195838, -1.50489)
mesh = SubResource("BoxMesh_e1swt")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="Lantai"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Lantai/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_lf0cb")

[node name="maincharacter" parent="." instance=ExtResource("4_rdpe2")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 1.11436, 0.406561, 5.56606)

[node name="low poly truck" parent="." instance=ExtResource("5_yqbdp")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -1.99422, 2.68683, 3.32343)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DebugUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/DebugUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DebugButton" type="Button" parent="CanvasLayer/DebugUI/HBoxContainer"]
layout_mode = 2
text = "DebugButton"

[node name="DebugButton2" type="Button" parent="CanvasLayer/DebugUI/HBoxContainer"]
layout_mode = 2
text = "DebugButton2"

[node name="GameOverUI" type="Control" parent="CanvasLayer"]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_pbo13")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/GameOverUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 0.34902)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReferenceRect" type="ReferenceRect" parent="CanvasLayer/GameOverUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="GameOver" type="Label" parent="CanvasLayer/GameOverUI/VBoxContainer"]
layout_mode = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_am2wf")
horizontal_alignment = 1

[node name="Retry" type="Button" parent="CanvasLayer/GameOverUI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 71
text = "Retry"

[node name="racetrackx" parent="." instance=ExtResource("8_fx7ic")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.187796, 9.499)
visible = false

[node name="City" type="Node3D" parent="."]

[node name="Gedung 3" parent="City" instance=ExtResource("10_hpw4c")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 8.25003, -1.09018, 22.8248)

[node name="Gedung 14" parent="City" instance=ExtResource("10_hpw4c")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -7.37689, -1.09018, 33.8297)

[node name="Gedung 15" parent="City" instance=ExtResource("10_hpw4c")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -27.3452, -1.09018, 34.8342)

[node name="Gedung 2" parent="City" instance=ExtResource("11_rbn5a")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -7.34291, -0.825656, 22.4881)

[node name="Gedung 8" parent="City" instance=ExtResource("11_rbn5a")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -12.1406, -0.825656, 34.7012)

[node name="Gedung 20" parent="City" instance=ExtResource("11_rbn5a")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -12.5575, -0.825656, 16.4071)

[node name="Gedung 28" parent="City" instance=ExtResource("11_rbn5a")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -12.5575, -0.825656, 0.395405)

[node name="Gedung 19" parent="City" instance=ExtResource("11_rbn5a")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -27.2014, -0.825656, 19.4668)

[node name="Gedung 30" parent="City" instance=ExtResource("11_rbn5a")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -27.2014, -0.825656, -18.4146)

[node name="Gedung 10" parent="City" instance=ExtResource("11_rbn5a")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -7.31178, -0.825656, 39.9365)

[node name="Gedung 23" parent="City" instance=ExtResource("10_hpw4c")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -27.502, -1.09018, -2.58251)

[node name="Gedung 24" parent="City" instance=ExtResource("11_rbn5a")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -27.123, -0.825656, -10.2806)

[node name="Gedung 29" parent="City" instance=ExtResource("11_rbn5a")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -27.0822, -0.825656, -26.6649)

[node name="Gedung 25" parent="City" instance=ExtResource("11_rbn5a")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -27.123, -0.825656, 3.96377)

[node name="Gedung 1" parent="City" instance=ExtResource("12_sg2da")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 7.95152, -0.491154, 31.2682)

[node name="Gedung 31" parent="City" instance=ExtResource("12_sg2da")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 14.645, -0.491154, 22.6009)

[node name="Gedung 22" parent="City" instance=ExtResource("12_sg2da")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -26.8525, -0.491154, 11.1655)

[node name="Gedung 21" parent="City" instance=ExtResource("12_sg2da")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -11.1605, -0.491154, 28.0913)

[node name="Gedung 26" parent="City" instance=ExtResource("12_sg2da")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -12.5518, -0.491154, 8.95769)

[node name="Gedung 27" parent="City" instance=ExtResource("12_sg2da")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -12.5518, -0.491154, -5.56741)

[node name="Gedung 40" parent="City" instance=ExtResource("12_sg2da")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -15.242, -0.491154, -27.5912)

[node name="Gedung 9" parent="City" instance=ExtResource("12_sg2da")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -12.5518, -0.491154, 40.2121)

[node name="Gedung 4" parent="City" instance=ExtResource("10_hpw4c")]
transform = Transform3D(-1.09278e-07, 0, -2.5, 0, 2.5, 0, 2.5, 0, -1.09278e-07, 5.98407, -1.09018, 55.5576)

[node name="Gedung 16" parent="City" instance=ExtResource("10_hpw4c")]
transform = Transform3D(-1.09278e-07, 0, -2.5, 0, 2.5, 0, 2.5, 0, -1.09278e-07, -26.2939, -1.09018, 55.5576)

[node name="Gedung 17" parent="City" instance=ExtResource("10_hpw4c")]
transform = Transform3D(-1.09278e-07, 0, -2.5, 0, 2.5, 0, 2.5, 0, -1.09278e-07, -27.148, -1.09018, 26.3615)

[node name="Gedung 12" parent="City" instance=ExtResource("10_hpw4c")]
transform = Transform3D(-1.09278e-07, 0, -2.5, 0, 2.5, 0, 2.5, 0, -1.09278e-07, -11.5902, -1.09018, 55.5576)

[node name="Gedung 5" parent="City" instance=ExtResource("11_rbn5a")]
transform = Transform3D(-1.09278e-07, 0, -2.5, 0, 2.5, 0, 2.5, 0, -1.09278e-07, 8.01585, -0.825656, 42.3245)

[node name="Gedung 32" parent="City" instance=ExtResource("10_hpw4c")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 22.7107, -1.09018, -15.7818)

[node name="Gedung 33" parent="City" instance=ExtResource("12_sg2da")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 22.8515, -0.491154, -7.33835)

[node name="Gedung 34" parent="City" instance=ExtResource("10_hpw4c")]
transform = Transform3D(-1.09278e-07, 0, -2.5, 0, 2.5, 0, 2.5, 0, -1.09278e-07, 22.8612, -1.09018, 13.5067)

[node name="Gedung 35" parent="City" instance=ExtResource("11_rbn5a")]
transform = Transform3D(-1.09278e-07, 0, -2.5, 0, 2.5, 0, 2.5, 0, -1.09278e-07, 22.6853, -0.825656, 3.71789)

[node name="Gedung 41" parent="City" instance=ExtResource("11_rbn5a")]
transform = Transform3D(-1.09278e-07, 0, -2.5, 0, 2.5, 0, 2.5, 0, -1.09278e-07, 22.3192, -0.825656, 22.253)

[node name="Gedung 36" parent="City" instance=ExtResource("10_hpw4c")]
transform = Transform3D(-1.09278e-07, 0, 2.5, 0, 2.5, 0, -2.5, 0, -1.09278e-07, -5.60304, -1.09018, -28.9556)

[node name="Gedung 37" parent="City" instance=ExtResource("12_sg2da")]
transform = Transform3D(-1.09278e-07, 0, 2.5, 0, 2.5, 0, -2.5, 0, -1.09278e-07, 2.84041, -0.491154, -27.8516)

[node name="Gedung 38" parent="City" instance=ExtResource("10_hpw4c")]
transform = Transform3D(2.5, 0, -1.42109e-14, 0, 2.5, 0, 1.42109e-14, 0, 2.5, 26.1253, -1.09018, -28.2274)

[node name="Gedung 39" parent="City" instance=ExtResource("11_rbn5a")]
transform = Transform3D(2.5, 0, -1.42109e-14, 0, 2.5, 0, 1.42109e-14, 0, 2.5, 13.8966, -0.825656, -28.5641)

[node name="Gedung 13" parent="City" instance=ExtResource("11_rbn5a")]
transform = Transform3D(-1.09278e-07, 0, -2.5, 0, 2.5, 0, 2.5, 0, -1.09278e-07, -26.7042, -0.825656, 42.3245)

[node name="Gedung 6" parent="City" instance=ExtResource("12_sg2da")]
transform = Transform3D(-1.09278e-07, 0, -2.5, 0, 2.5, 0, 2.5, 0, -1.09278e-07, -2.45939, -0.491154, 55.1817)

[node name="Gedung 11" parent="City" instance=ExtResource("12_sg2da")]
transform = Transform3D(-1.09278e-07, 0, -2.5, 0, 2.5, 0, 2.5, 0, -1.09278e-07, -19.814, -0.491154, 55.1817)

[node name="Gedung 18" parent="City" instance=ExtResource("12_sg2da")]
transform = Transform3D(-1.09278e-07, 0, -2.5, 0, 2.5, 0, 2.5, 0, -1.09278e-07, -26.7264, -0.491154, 48.3492)

[node name="racetrackx2" parent="." instance=ExtResource("14_f1u3f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.187796, 9.499)

[connection signal="body_entered" from="DestroyArea" to="DestroyArea" method="_on_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/DebugUI/HBoxContainer/DebugButton" to="." method="_on_debug_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOverUI/VBoxContainer/Retry" to="CanvasLayer/GameOverUI" method="_on_retry_pressed"]

[editable path="Root Scene2"]
[editable path="Root Scene"]
